[package]
name = "hyprrust_macros"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A helper crate for the hyprrust crate. Not meant to be used by itself."
repository = "https://github.com/andrewandreii/hyprrust_macros"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.38"
syn = { version = "2.0.96", features = ["full"] }
